--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>공통 포트폴리오</title>
+    <title>이지은 포트폴리오</title>
 </head>
 <body>
     <!-- 상단영역 -->
     <header>
         <div class="wrap">
             <nav class="flex">
-                <h1><a href="" class="block">공통 PORTFOLIO</a></h1>
+                <h1><a href="" class="block">JEL's PORTFOLIO</a></h1>
                 <ul class="gnb flex">
                     <li><a href="" class="block h4">About Me </a></li>
                     <li><a href="" class="block h4">Skill&Tools </a></li>
@@ -41,7 +41,7 @@
                 <ul class="intro">
                     <li>
                         <h3 class="h6">소개</h3>
-                        <p class="p15">웹 디자이너, 웹 퍼블리셔 지망생 홍길동입니다.</p>
+                        <p class="p15">웹 디자이너, 웹 퍼블리셔 지망생 이지은입니다.</p>
                     </li>
                     <li>
                         <h3 class="h6">경력</h3>
@@ -239,7 +239,7 @@
     <!-- 하단영역 -->
     <footer>
         <div class="paddingT50 paddingb50 grid">
-            <h1><a href="" class="block">공통 PORTFOLIO</a></h1>
+            <h1><a href="" class="block">JEL's PORTFOLIO</a></h1>
             <address>
                 <strong></strong>
                 <strong></strong>
